[gd_scene load_steps=34 format=2]

[ext_resource path="res://main/world/character/enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/hammer_bot_body_high_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://main/world/character/enemy/hammer_robot/hammer_robot.gd" type="Script" id=3]
[ext_resource path="res://main/world/projectile/bullet/gravity_bullet/hammer/Hammer.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/world/character/enemy/states/enemy_strafe.gd" type="Script" id=5]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/hammer_bot_leg_mr_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/hammer_bot_leg_ml_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/hammer_robot_antenna_spritesheet.png" type="Texture" id=8]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/half_saw_spritesheet.png" type="Texture" id=9]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/hammer_bot_body_low_spritesheet.png" type="Texture" id=10]
[ext_resource path="res://main/world/character/Shadow.tscn" type="PackedScene" id=11]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sprites/hammer_bot_shadow.png" type="Texture" id=12]
[ext_resource path="res://main/world/random_sound_spawner/random_sound_spawner.gd" type="Script" id=13]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sounds/heavy_metal_step3.wav" type="AudioStream" id=14]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sounds/heavy_metal_step1.wav" type="AudioStream" id=15]
[ext_resource path="res://main/world/character/enemy/hammer_robot/sounds/heavy_metal_step2.wav" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 31 )

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0.226519, 0.375691, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.695313, 1, 0.950012, 1, 0.956863, 0.545098, 0.294118, 0 )

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/LegMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 3, 4, 0, 1, 2, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "run_step"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/LegML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "run_step"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/BodyHigh:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "unwind"
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/BodyHigh:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 1, 0, 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Antenna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 4 ]
}

[sub_resource type="Animation" id=11]
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Antenna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 5, 6, 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Antenna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "unwind"
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Antenna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 1, 0, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "unwind_left"
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Antenna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 2 ]
}

[sub_resource type="Animation" id=12]
resource_name = "unwind_right"
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Antenna:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 2, 2 ]
}

[sub_resource type="Animation" id=13]
length = 0.03
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Saw:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.015, 0.03 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 3, 4, 4 ]
}

[sub_resource type="Animation" id=14]
resource_name = "fall"
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Saw:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0, 0 ]
}

[sub_resource type="Animation" id=15]
length = 0.195
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Saw:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.13, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 2 ]
}

[sub_resource type="CircleShape2D" id=17]
radius = 250.0

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="HammerRobot" instance=ExtResource( 1 )]
script = ExtResource( 3 )
move_speed = 32.0
gravity = 9.0
max_health = 32.0
contact_damage = 4.0
hammer = ExtResource( 4 )
shoot_delay = 0.65
shoot_random = 0.45
shoot_up_tolerance = 32
up_throw_angle_cycle = [ 75.0, 55.0, 65.0 ]

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 16 )

[node name="Shadow" parent="Sprites" index="0" instance=ExtResource( 11 )]
texture = ExtResource( 12 )
offset = Vector2( 0, 4 )
max_distance = 200.0

[node name="LegMR" type="Sprite" parent="Sprites" index="1"]
light_mask = 0
texture = ExtResource( 6 )
hframes = 5
frame = 3

[node name="LegML" type="Sprite" parent="Sprites" index="2"]
light_mask = 0
texture = ExtResource( 7 )
hframes = 5
frame = 4

[node name="BodyLow" type="Sprite" parent="Sprites" index="3"]
light_mask = 0
texture = ExtResource( 10 )
hframes = 5

[node name="Saw" type="Sprite" parent="Sprites" index="4"]
light_mask = 0
texture = ExtResource( 9 )
hframes = 5
frame = 3

[node name="SawSparks" type="CPUParticles2D" parent="Sprites/Saw" index="0"]
emitting = false
amount = 32
lifetime = 0.35
speed_scale = 2.5
direction = Vector2( 0, -1 )
spread = 180.0
initial_velocity = 73.39
color_ramp = SubResource( 18 )

[node name="BodyHigh" type="Sprite" parent="Sprites" index="5"]
light_mask = 0
texture = ExtResource( 2 )
hframes = 5

[node name="Antenna" type="Sprite" parent="Sprites" index="6"]
light_mask = 0
position = Vector2( 1.5, -32.5 )
texture = ExtResource( 8 )
hframes = 7

[node name="Explosion" parent="Sprites" index="7"]
light_mask = 0

[node name="LegMR" type="AnimationPlayer" parent="AnimationPlayers" index="1"]
playback_speed = 0.75
anims/walk1 = SubResource( 3 )

[node name="LegML" type="AnimationPlayer" parent="AnimationPlayers" index="2"]
playback_speed = 0.75
anims/walk2 = SubResource( 4 )

[node name="Body" type="AnimationPlayer" parent="AnimationPlayers" index="3"]
playback_speed = 0.6
anims/charge_up = SubResource( 5 )
anims/unwind = SubResource( 6 )

[node name="Antenna" type="AnimationPlayer" parent="AnimationPlayers" index="4"]
playback_speed = 0.6
anims/charge_left = SubResource( 9 )
anims/charge_right = SubResource( 11 )
anims/charge_up = SubResource( 7 )
anims/unwind = SubResource( 8 )
anims/unwind_left = SubResource( 10 )
anims/unwind_right = SubResource( 12 )

[node name="Saw" type="AnimationPlayer" parent="AnimationPlayers" index="5"]
anims/charge_saw = SubResource( 13 )
anims/fall = SubResource( 14 )
anims/rise = SubResource( 15 )

[node name="StateMachine" parent="." index="4"]
initial_state = NodePath("Strafe")

[node name="Strafe" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 5 )
state_owner_path = NodePath("../..")

[node name="CollisionShape2D" parent="Vision" index="0"]
shape = SubResource( 17 )

[node name="Hitbox" parent="." index="8"]
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="ShootDelayTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="StepDelayTimer" type="Timer" parent="." index="10"]
wait_time = 0.05
one_shot = true

[node name="StepSounds" type="Node2D" parent="." index="11"]
script = ExtResource( 13 )
sounds = [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ) ]
volume = -1.0
rand_pitch_range = 0.2
max_distance = 350
